[package]
name = "grideye"
version = "0.2.0"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust driver for Grid-EYE / Panasonic AMG88(33)"
documentation = "https://docs.rs/grideye"
keywords = ["embedded-hal-driver", "grideye", "AMG8833"]
license = "Apache-2.0"
repository = "https://github.com/uwearzt/grideye"

[dependencies]
embedded-hal = "0.2.1"
bit_field = "0.9.0"

[dev-dependencies]
linux-embedded-hal = "0.2.0"
