# ------------------------------------------------------------------------------
# Copyright 2018 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "grideye"
version = "0.2.4"
edition = "2018"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust driver for Grid-EYE / Panasonic AMG88(33)"
documentation = "https://docs.rs/grideye"
keywords = ["embedded-hal-driver", "grideye", "AMG8833"]
license = "Apache-2.0"
repository = "https://github.com/uwearzt/grideye"

[dependencies]
embedded-hal = "0.2.3"
bit_field = "0.10.0"
libm = "0.2.1"

# ------------------------------------------------------------------------------
# build  example stm32.rs
[dev-dependencies]
# panic-semihosting ="0.5.0"
# cortex-m = "0.5.7"
# cortex-m-rt = "0.6.3"

# [dependencies.stm32f4]
# version = "0.2.3"
# features = ["stm32f405", "rt"]

# ------------------------------------------------------------------------------
# build example raspberrypi.rs
linux-embedded-hal = "0.2.2"
